<resources>
    <string name="app_name">SampleApp</string>
    <string name="multimodule_app_hello_world">MultiModule App: Hello World!</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="mod_b">Mod B</string>
    <string name="order">Order</string>
</resources>